--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -39,11 +39,11 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>Xerox</title>
+    <title>San3ah</title>
 </head>
 
 <body>
-    <iframe src="https://dynawix.com/xeroxapp" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;background:url(img/loader.gif) center center no-repeat;">
+    <iframe src="https://san3ah.azurewebsites.net/Industrial" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;background:url(img/loader.gif) center center no-repeat;" allow="geolocation *;">
 
   
     <script type="text/javascript" src="cordova.js"></script>
