--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-    <iframe src="https://san3ah.azurewebsites.net/Industrial" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;background:url(img/loader.gif) center center no-repeat;" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *;">
+    <iframe src="https://san3ah.dynawix.com/Industrial" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;background:url(img/loader.gif) center center no-repeat;" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *;">
   
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
